--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@actions/github": "^4.0.0",
     "axios": "^0.26.1"
   },
   "devDependencies": {
