--- a/.github/workflows/find-transition-issues.yml
+++ b/.github/workflows/find-transition-issues.yml
@@ -13,10 +13,10 @@ jobs:
 
     - name: Find and Transition Issue Key
       uses: ./
-      env:
-        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
-        JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
-        JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
       with:
+        jira-base-url: ${{ secrets.JIRA_BASE_URL }}
+        jira-user-email: ${{ secrets.JIRA_USER_EMAIL }}
+        jira-api-token: ${{ secrets.JIRA_API_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         issuetypes: Story,Bug
         transitions: In Progress,In Progress
